[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-binary-search-tree"
version = "0.1.0"
description = "A library adding binary search trees to python."
readme = "README.MD"
requires-python = ">=3.9"
authors = [ {name = "Joshua Morningstar", email = "joshuam18745@gmail.com"} ]
maintainers = [ {name = "Joshua Morningstar", email = "joshuam18745@gmail.com"} ]
license = "MIT"
license-files = [
    "LICENSE",
    "README.MD"
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["binary search tree", "data structure"]


[project.urls]
Documentation = "https://github.com/JoshuaM176/PyDoublyLinkedList/blob/main/README.MD"
Repository = "https://github.com/JoshuaM176/PyDoublyLinkedList"
Issues = "https://github.com/JoshuaM176/PyDoublyLinkedList/issues"
Changelog = "https://github.com/JoshuaM176/PyDoublyLinkedList/blob/main/CHANGES"



[[tool.setuptools.ext-modules]]
name = "py_binary_search_tree.binary_search_tree"
sources = ["src/binary_search_tree.c"]
